--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
+  "private": true,
   "name": "brutal-website",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
     "development": "parcel index.html",
     "build": "parcel build index.html"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "posthtml-expressions": "^1.1.1",
     "sass": "^1.25.0"
-  },
-  "dependencies": {
-    "posthtml-expressions": "^1.1.1"
   }
 }
