--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "parcel build index.html --public-url=https://brutal.computer"
   },
   "devDependencies": {
-    "parcel": "latest",
+    "parcel": "^2.0.0-beta.1",
     "posthtml-expressions": "^1.5.0",
     "sass": "^1.26.11"
   }
